crates/squawk_parser/src/snapshots/parser__test__drop_tablespace_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/drop_tablespace.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_TABLESPACE_STMT
    DROP_KW "drop"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    NAME_REF
      IDENT "foo"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_TABLESPACE_STMT
    DROP_KW "drop"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    NAME_REF
      IDENT "t"
  SEMICOLON ";"
  WHITESPACE "\n\n"
